--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dash_interactive_graphviz = "^0.0.3"
 fn_graph = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^18.3-alpha.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
