--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dash_treeview_antd = "^0.0.1"
 dash_split_pane = "^1.0"
 dash_interactive_graphviz = "^0.0.3"
 fn_graph = "^0.1.0"
+numexpr = "^2.7.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
