--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "fn_graph_studio"
-version = "0.2.4"
+version = "0.2.5"
 description = "A web based explorer for fn_graph function composers"
 authors = ["James Saunders <james@businessoptics.biz>"]
 license = "MIT"
+include = ["fn_graph_studio/styles.css"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
