Update fn_graph version reqs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,15 @@ dash = "^1.7"
 dash_core_components = "^1.6"
 dash_split_pane = "^1.0"
 dash_interactive_graphviz = "^0.1.0"
-fn_graph = "^0.5.0"
+fn_graph = ">=0.5.0"
 dash-treebeard = "^0.0.1"
+sh = "^1.12.14"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
+
+[tool.poetry.scripts]
+run_graph_studio = "fn_graph_studio.cli:run_studio_command"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
