--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,15 @@ dash_split_pane = "^1.0"
 dash_interactive_graphviz = "^0.1.0"
 fn_graph = ">=0.5.0"
 dash-treebeard = "^0.0.1"
-sh = "^1.12"
+sh = "^1.0"
+dash-dangerously-set-inner-html = "^0.0.2"
+seaborn = "^0.10.0"
+statsmodels = "^0.11.1"
+
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
+matplotlib = "^3.2.1"
 
 [tool.poetry.scripts]
 run_graph_studio = "fn_graph_studio.cli:run_studio_command"
