Add syntax highlighting and a proper code editor.
The result processor now uses a small ace-editor. It syntax highlights as well as debouncing so input is not sluggish.

The dash-ace dependency is currently pulled off of a fork in order to activate persistence, this shoud  move of fthe primary package once https://github.com/reasoned-ai/dash-ace/pull/2 is merged.

The code definition is now highlighted using pygments.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dash-dangerously-set-inner-html = "^0.0.2"
 seaborn = "^0.10.0"
 statsmodels = "^0.11.1"
 matplotlib = "^3.2.1"
+dash-ace = {git = "https://github.com/BusinessOptics/dash-ace.git", allow-prereleases = true}
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
