--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dash-ace = {git = "https://github.com/BusinessOptics/dash-ace.git", allow-prerel
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
+sklearn = "^0.0"
 
 [tool.poetry.scripts]
 fn_graph_studio = "fn_graph_studio.cli:cli"
