--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dash-ace = {git = "https://github.com/BusinessOptics/dash-ace.git", allow-prerel
 seaborn = "^0.10.0"
 statsmodels = "^0.11.1"
 matplotlib = "^3.2.1"
+dash-cytoscape = "^0.1.1"
+networkx = "^2.4"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
