--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ fn_graph = ">=0.7.2"
 dash-treebeard = "^0.0.1"
 sh = "^1.0"
 dash-dangerously-set-inner-html = "^0.0.2"
-dash-ace = {git = "https://github.com/BusinessOptics/dash-ace.git", allow-prereleases = true}
 seaborn = "^0.10.0"
 statsmodels = "^0.11.1"
 matplotlib = "^3.2.1"
 dash-cytoscape = "^0.1.1"
 networkx = "^2.4"
+dash_ace_persistent = "^0.3.3"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
