--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ statsmodels = "^0.11.1"
 matplotlib = "^3.2.1"
 dash-cytoscape = "^0.1.1"
 networkx = "^2.4"
-dash_ace_persistent = "^0.3.3"
+dash-ace-persistent = "^0.3.4"
+pygments = "^2.6.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
