--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ pygments = "^2.6.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0", allow-prereleases = true}
+pylint = "^2.5.2"
+rope = "^0.17.0"
 
 [tool.poetry.scripts]
 fn_graph_studio = "fn_graph_studio.cli:cli"
