--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ homepage="https://github.com/BusinessOptics/fn_graph_studio"
 [tool.poetry.dependencies]
 python = "^3.7"
 pandas = ">=0.25.3"
-plotly = "^4.4"
-dash = "^1.7"
-dash_core_components = "^1.6"
+plotly = "^4.0"
+dash = "^1.0"
+dash_core_components = "^1.0"
 dash_split_pane = "^1.0"
-dash_interactive_graphviz = "^0.2"
-fn_graph = {extras = ["examples"], version = "^0.10.1", optional=true}
+dash_interactive_graphviz = "^0.0"
+fn_graph = {extras = ["examples"], version = "^0.14"}
 dash-treebeard = "^0.0.1"
 sh = "^1.0"
 dash-dangerously-set-inner-html = "^0.0.2"
